# x-clone

./: Cargo.toml  Dockerfile  justfile
backend/query/: Cargo.toml
backend/query/src/: lib.rs  post.rs  session.rs  user.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  extractor.rs  handler.rs  lib.rs  router.rs  session.rs
backend/server/src/handler/: post.rs  user.rs
frontend/: Cargo.toml
frontend/src/: app.rs  elements.rs  main.rs  page.rs  tailwind.css  util.rs
frontend/src/elements/: keyed_notification_box.rs  navbar.rs  post.rs  toaster.rs
frontend/src/elements/post/: actionbar.rs  content.rs
frontend/src/page/: home.rs  login.rs  register.rs  trending.rs
frontend/src/page/new_post/: chat.rs
frontend/src/util/: cookie.rs
shared/domain/: Cargo.toml
shared/domain/src/: ids.rs  lib.rs  post.rs  user.rs
shared/endpoint/: Cargo.toml
shared/endpoint/src/: lib.rs
shared/endpoint/src/post/: endpoint.rs  types.rs
shared/endpoint/src/user/: endpoint.rs
