[package]
name = "uchat_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
nutype = { version = "0.4.3", features = ["serde"] }
once_cell = "1"
regex = "1"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1"
uuid = { version = "1.10.0", features = ["v4", "serde", "js"] }


diesel-derive-newtype = {version="2.0.0", optional = true}

[dependencies.diesel] 
version = "2.2.1"
features = ["postgres", "uuid", "chrono", "serde_json", "postgres_backend"]

[features]
# This creates a new feature for access
query = ["dep:diesel" , "dep:diesl-derive-newtype"]